# nba-analytics

./: .dockerignore  .env.example  .gitignore  COMMANDS_DEMO.md  COMMIT_COMMANDS.md  CONFIGURATION.md  CORRECTIONS_FINALES_07_02_2026.md  CORRECTIONS_REPORT_07_02_2026.md  Dockerfile  ENV_SETUP_COMPLETE.md  FINAL_TEST_REPORT.md  GOLD_TIERED_RESULTS.md  IMPROVEMENT_PLAN.md  NBA11_20_TEST_REPORT.md  NBA15_SUMMARY.md  NBA18_IMPLEMENTATION_COMPLETE.json  NBA18_SUMMARY.md  NBA19_COMPLETE_README.md  NBA19_PHASE1_README.md  NBA22_OPTIMIZATION_GUIDE.md  NBA22_SUMMARY.md  NBA23_FINAL_REPORT.md  NBA23_PHASE2_REPORT.md  NBA23_PHASE3_REPORT.md  NBA23_REFACTORING_REPORT.md  NBA23_V3_SUMMARY.md  NBA29_IMPLEMENTATION.md  PHASE2_RESULTS.md  PHASE3_RESULTS.md  PRESENTATION_TEMPLATE.md  PROBLEMS_AND_SOLUTIONS.md  PROJECT_FINAL_REPORT.md  README.md  README_PROCHAINES_ETAPE.md  RECAPITULATIF_09-02-2026.md  RESULTS_LIVE_FEATURES.md  SETUP.md  TEST_PLAN_SUMMARY.md  TEST_REPORT_07_02_2026.md  WEEK1_RESULTS.md  (+34 more)
.jupyter_runtime/: jpserver-105508-open.html  jpserver-105508.json  jpserver-111084-open.html  jpserver-111084.json  jpserver-89272-open.html  jpserver-89272.json  jupyter_cookie_secret  kernel-570d5c9c-74ee-4400-a39f-ca5ecb9ac0da.json  kernel-5e4c56f8-b011-48de-b4a6-44b6e2a1035d.json  kernel-c9cf52dd-7738-43c8-91cc-e03dd44ac7f9.json
archive/: backtest_final_2025-26.py  demo_nba29.py  enrich_gold_premium.py  fetch_boxscores_2025_26.py  generate_combined_report.py  generate_types.py  harmonize_features.py  nba15_demo.py  schedule_betting_updates.py  test_full_season_setup.py  transform_live_to_v3.py  update_features_with_boxscores.py  update_season_2025_26.py  use_gold_tiered.py  validate_30_matches.py  validate_nba18_formulas.py  validate_simple.py  week1_launcher.py  wrapper_run_predictions_dryrun_20260210_133447.py
configs/: cleaning_rules.yaml  data_products.yaml  monitoring.yaml  silver_stratification.yaml
data/: team_mapping_extended.json  team_name_to_id.json
docs/: API_INGESTION.md  API_REFERENCE.md  ARCHITECTURE_V2.md  BACKTEST_SYSTEM.md  BETTING_GUIDE.md  CALENDAR_SYSTEM_V2.md  CHANGELOG.md  CLI_REFERENCE.md  CONFIGURATION.md  CORRECTIONS_CALENDAR_V2.md  CORRECTIONS_SUMMARY.md  DATA_CLEANING.md  DATA_QUALITY_REPORT.md  EXAMPLES.md  FINAL_OPTIMIZATION_REPORT.md  INDEX.md  INSTALLATION.md  JIRA_BACKLOG.md  MONITORING.md  agent.md  (+18 more)
(+473 files in other folders)
