[tool.poetry]
name = "nba-analytics"
version = "2.0.0"
description = "NBA Analytics Platform - Professional Data Engineering & ML Pipeline"
authors = ["NBA Analytics Team"]
readme = "README.md"
packages = [{include = "nba"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core Data Processing
pyspark = "^3.5.0"
delta-spark = "^3.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
pyarrow = "^12.0.0"

# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"

# CLI
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

# Configuration
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"

# Database
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.0"}
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
aiosqlite = "^0.19.0"

# Cache & Tasks
redis = "^5.0.0"
celery = "^5.3.0"

# ML
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
xgboost = "^2.0.0"
mlflow = "^2.10.0"

# Dashboard
streamlit = "^1.31.0"
plotly = "^5.18.0"

# Validation
pandera = {extras = ["io"], version = "^0.18.0"}
great-expectations = "^0.18.0"

# Monitoring
prometheus-client = "^0.19.0"
structlog = "^24.1.0"

# NBA API
nba-api = "^1.1.11"
requests = "^2.31.0"
httpx = "^0.26.0"

# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"

# Development
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
ipython = "^8.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nba = "nba.cli:app"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
